--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,5 +1,4 @@
 .header{
-  width: 100vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -45,7 +44,8 @@ ul.nav {
 }
 
 img.logo {
-    height:80px;
+    height:90px;
+    border-radius: 50px;
     padding: 15px;
     margin-left:15px
 }
