--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
-
+@import url("https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js");
+@import url("https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js");
 @font-face {
   font-family: "Sofia Pro";
   src: url(./utilities/fonts/Sofia\ Pro\ Black\ Az.otf);
@@ -85,9 +86,13 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   overflow-x: hidden;
-}
+  background: #C9FFBF;  
+background: -webkit-linear-gradient(to right, #FFAFBD, #C9FFBF); 
+background: linear-gradient(to right, #FFAFBD, #C9FFBF); 
+
+} */
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .hidescrollbar::-webkit-scrollbar {
