--- a/src/App.css
+++ b/src/App.css
@@ -265,13 +265,34 @@ body.active { overflow: hidden; }
   color: var(--white);
   font-size: var(--fs-6);
   font-weight: var(--fw-500);
+   border: 1px solid black;
   line-height: 1.3;
   padding: 11px 25px;
   border-radius: var(--radius-pill);
   transition: var(--transition-1);
 }
 
-.btn:is(:hover, :focus) { background-color: var(--blue-ryb); }
+.btn:is(:hover, :focus) {  
+  border: 1px solid black;
+  color: black;
+  background-color: var(--white); }
+.btn1 {
+  background-color: var(--eerie-black);
+  color: var(--white);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-500);
+   border: 1px solid black;
+  line-height: 1.3;
+  padding: 11px 25px;
+  border-radius: var(--radius-pill);
+  transition: var(--transition-1);
+}
+
+.btn1:is(:hover, :focus) {  
+  border: 1px solid black;
+  color: black;
+  background-color: var(--white);
+ }
 
 .section-subtitle { padding-block: 15px; }
 
