--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-
-*{
-  font-family: 'Poppins', sans-serif;
+* {
+  font-family: "Poppins", sans-serif;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  user-select:none;
-  
+  user-select: none;
 }
 
-.App{
+.App {
   width: 60%;
   margin: 2% auto;
 }
@@ -57,10 +55,6 @@
  * copyright 2022 codewithsadee
  */
 
-
-
-
-
 /*-----------------------------------*\
   #Theme 
 \*-----------------------------------*/
@@ -69,16 +63,56 @@
   color: var(--white);
   font-size: var(--fs-6);
   font-weight: var(--fw-500);
-   border: 1px solid black;
+  border: 1px solid black;
   line-height: 1.3;
   padding: 11px 25px;
   border-radius: var(--radius-pill);
   transition: var(--transition-1);
 }
 
-.Black-button:is(:hover, :focus) {  
+.Black-button:is(:hover, :focus) {
   border: 1px solid black;
   color: black;
   background-color: var(--white);
- }
+}
 
+.Heading1 {
+  font-size: 2rem;
+}
+
+.Heading2 {
+  text-align: center;
+  font-size: 3vw;
+  text-transform: uppercase;
+  color: #222;
+  letter-spacing: 1px;
+  font-family: "Playfair Display", serif;
+  font-weight: 400;
+}
+.Heading2 span {
+  margin-top: 5px;
+  font-size: 1vw;
+  color: #444;
+  word-spacing: 1px;
+  font-weight: normal;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+
+  display: grid;
+  grid-template-columns: 1fr max-content 1fr;
+  grid-template-rows: 27px 0;
+  grid-gap: 20px;
+  align-items: center;
+}
+
+.Heading2 span:after,
+.Heading2 span:before {
+  content: " ";
+  display: block;
+  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #ccc;
+  height: 5px;
+  background-color: #f8f8f8;
+}
