--- a/src/components/Form/AddBlogForm.module.css
+++ b/src/components/Form/AddBlogForm.module.css
@@ -1,40 +1,75 @@
-* {
-  outline: 0;
-}
-/* .App {
-  font-family: sans-serif;
-  display: flex;
-  text-align: center;
+.container {
+  height: 300PX;
+  width: 70vw;
   align-items: center;
+  display: flex;
+  justify-content: center;
+  background-color: #fcfcfc;
+}
+
+.card {
+  border-radius: 10px;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
+  width: 80vw;
+  height: 250PX;
+  background-color: #ffffff;
+  padding: 10px 30px 40px;
+}
+
+.card h3 {
+  font-size: 22px;
+  font-weight: 600;
+  
+}
+
+.drop_box {
+  margin: 10px 0;
+  padding: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
-} */
-
-input {
-  display: block;
-  min-width: 90%;
-  margin: 1em;
-  padding: 1em;
-  width: 25vw;
-  border-radius: 8px;
-  border-style: none;
-  border: 1px solid #e4e6e8;
-  transition: 0.1s ease;
-}
-
-input:hover {
-  border-color: #000;
-}
-
-button {
-  margin: 0.8em;
-  padding: 1em;
-  border: 1px solid #e4e6e8;
+  border: 3px dotted #a3a3a3;
   border-radius: 5px;
-  cursor: pointer;
-  transition: 0.1s ease-in;
 }
 
-button:hover {
-  background-color: palevioletred;
-  color: white;
+.drop_box h4 {
+  font-size: 16px;
+  font-weight: 400;
+  color: #2e2e2e;
+}
+
+.drop_box p {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  font-size: 12px;
+  color: #a3a3a3;
+}
+
+.btn2 {
+  text-decoration: none;
+  background-color: #005af0;
+  color: #ffffff;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  transition: 0.3s;
+}
+
+.btn2:hover{
+  text-decoration: none;
+  background-color: #ffffff;
+  color: #005af0;
+  padding: 10px 20px;
+  border: none;
+  outline: 1px solid #010101;
+}
+.form input {
+  margin: 10px 0;
+  width: 100%;
+  background-color: #e2e2e2;
+  border: none;
+  outline: none;
+  padding: 12px 20px;
+  border-radius: 4px;
 }
