--- a/src/components/Pages/Home/tempHome.css
+++ b/src/components/Pages/Home/tempHome.css
@@ -288,6 +288,9 @@ body.active { overflow: hidden; }
 }
 
 .avatar-item:not(:first-child) { margin-inline-end: -15px; }
+.outLet{
+  margin: 0.5vw 0vw;
+}
 
 .avatar {
   width: 40px;
@@ -553,7 +556,11 @@ body.active { overflow: hidden; }
   #FOOTER
 \*-----------------------------------*/
 
-.footer { padding-block: 40px 20px; }
+.footer { padding-block: 40px 20px;    
+  margin-top: 3vw;
+    padding-block: 40px 20px;
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12); }
 
 .section.footer-top { border-block-end: none; }
 
