--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,15 @@
   box-sizing: border-box;
 }
 
+.rdw-editor-main{
+  min-height: 70vh;
+  padding: 2vw;
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
+}
+.css-17w8br2-MuiInputBase-root-MuiFilledInput-root {
+  font-size: 2rem !important;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
