--- a/src/components/Pages/Profile/Profile.module.css
+++ b/src/components/Pages/Profile/Profile.module.css
@@ -107,7 +107,7 @@
 .messageDiv {
   height: 600px;
   border-radius: 16px;
-  padding: 30px;
+  padding: 10px;
   -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
@@ -140,9 +140,19 @@ display: flex;
 
 .messages {
   display: flex;
-  flex-direction: row;
-      align-items: center;
-    justify-content: space-around;
+    flex-direction: row;
+    padding: 10px;
+    align-items: center;
+        justify-content: flex-start;
+    gap: 30px;
+    margin: 0.5vw;
+   border: 1px solid;
+   border-radius: 16px;
+}
+.messages:hover{
+      transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+
 }
 .messagesGroup{
     display: flex;
