--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,13 +1,34 @@
 .searchbar {
-  max-width: 200px;
-  display: flex;
-  margin-bottom: auto;
-  margin-top: auto;
-  height: 30px;
-  background: #1f97c2;
-  border-radius: 20px;
+transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+
+    color: inherit;
+    padding: 23px 24px;
+    padding-inline-end: 140px;
+    border-radius: 0px 0px 16px 16px;
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
+}
+.search_container {
+  float: right;
 }
 
+.search_container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.search_container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+
+}
 .fadeInWidth {
   animation: 0.2s linear fadeInWidth;
 }
