--- a/src/components/Pages/Profile/Profile.module.css
+++ b/src/components/Pages/Profile/Profile.module.css
@@ -49,6 +49,7 @@
 .profileDiv {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   width: 70vw;
   overflow: hidden;
   border-radius: 16px;
@@ -140,6 +141,7 @@
 display: flex;
     flex-direction: column;
     width: 120px;
+    height: 120px;
     border-radius: 16px;
     padding: 10px;
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
